<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFrame.PLoginDialog">

    <ImageView
        android:id="@+id/mjulogo_image"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:contentDescription="@string/mjuLogo"
        app:layout_constraintBottom_toTopOf="@+id/mju_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        app:srcCompat="@drawable/mjulogo" />

    <TextView
        android:id="@+id/mju_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myongjiUniversity"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/findinfo_button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:onClick="onFindInfoButtonClicked"
        android:text="@string/findInfo"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:onClick="onSignUpButtonClicked"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/signupsystem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/signUpSystem"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mju_text"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/loginid_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textVisiblePassword"
        android:textColorHighlight="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="76dp"
        android:layout_height="88dp"
        android:background="#FFFFFF"
        android:onClick="onLoginButtonClicked"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <EditText
        android:id="@+id/loginpw_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:textColorHighlight="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <ImageButton
        android:id="@+id/showloginpw_button"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:onClick="onShowLoginPwButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        app:srcCompat="@android:drawable/ic_menu_view" />

</androidx.constraintlayout.widget.ConstraintLayout>