<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFrame.PRegistration">

    <EditText
        android:id="@+id/registername_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registerstudentid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/registerpw_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerconfirm_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/agree_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:onClick="onRegisterButtonClicked"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <EditText
        android:id="@+id/registerconfirm_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/confirmHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/agree_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registerstudentid_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/studentIdHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/registerid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registerid_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/idHint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registerpw_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerid_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/registerpw_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerid_edit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerstudentid_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/registerid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerstudentid_edit" />

    <TextView
        android:id="@+id/registerconfirm_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/agree_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerconfirm_edit" />

    <TextView
        android:id="@+id/registerpw_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/registerconfirm_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerpw_edit" />

    <TextView
        android:id="@+id/registername_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/registerstudentid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registername_edit" />

    <ImageButton
        android:id="@+id/showregisterpw_button"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:onClick="onShowRegisterPwButtonClicked"
        app:layout_constraintBottom_toBottomOf="@+id/registerpw_edit"
        app:layout_constraintEnd_toEndOf="@+id/registerpw_edit"
        app:layout_constraintTop_toTopOf="@+id/registerpw_edit"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <ImageButton
        android:id="@+id/showregisterconfirm_button"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:onClick="onShowRegisterConfirmButtonClicked"
        app:layout_constraintBottom_toBottomOf="@+id/registerconfirm_edit"
        app:layout_constraintEnd_toEndOf="@+id/registerconfirm_edit"
        app:layout_constraintTop_toTopOf="@+id/registerconfirm_edit"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registration_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="@string/createAccount"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>