<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFrame.PFindInfo">

    <TextView
        android:id="@+id/findinfostudentid_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findinfostudentid_edit" />

    <TextView
        android:id="@+id/findinfoname_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findinfoname_edit" />

    <EditText
        android:id="@+id/findinfoname_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registerstudentid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/findinfostudentid_edit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/studentIdHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/registerid_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findinfoname_edit" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onFindInfoButtonClicked"
        android:text="@string/find"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/findinfoname_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/findinfo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="@string/findInfo"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>